# pinecone-async-client

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: example_usage.py  reranking.py
src/pinecone_async/: __init__.py  client.py  exceptions.py  index.py  schema.py
tests/: conftest.py  test_client.py  test_index.py  test_init_client.py  test_reranking.py
