[project]
name = "pinecone-async-client"
version = "0.1.0"
description = "Async client for Pinecone API"
authors = [
    { name = "Luca Mannini", email = "dev@lucamannini.com" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.0.0",
]
keywords = ["pinecone", "vector database", "async", "client"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pinecone_async"]

[project.urls]
"Homepage" = "https://github.com/aurelio-labs/pinecone-async-client"
"Bug Tracker" = "https://github.com/aurelio-labs/pinecone-async-client/issues"